# superset-formation

./: README.md
0-installation-superset/: Dockerfile  README.md  superset-values.yaml  values.yaml
1-postgres/: README.md
10-ldap-multi-roles/: Dockerfile copy  openldap-values.yaml  superset-values.yaml
10-report/: Dockerfile  debug_script.py  superset-values.yaml  values.yaml
11-monitoring/: Dockerfile  statd-values.yaml  statsd.sh  superset-values.yaml  vm-values.yaml  vm.sh
11-report/: Dockerfile  values.yaml
12-api/: main.py  pyproject.toml  report.py
12-monitoring/: Dockerfile  superset-values.yaml
12-upgrade/: superset-values.yaml
13-api/: main.html  main.py  pyproject.toml  roles.py  user.py
15-api/: main.py
2-sql-server/: Dockerfile  README.md  sql-server-values.yaml  superset-values.yaml  values.yaml
3-oracle/: superset-values.yaml
3-sql-server/: Dockerfile
4-connexions/: README.md  superset-values.yaml  values.yaml
4-oracle/: Dockerfile  README.md  values.yaml
5-connexions-best-practices/: Dockerfile.args  Dockerfile.requirements  requirements-drivers.txt  superset-values.yaml
6-secrets/: Chart.yaml  README.md  superset-configmap.yaml  superset-values.yaml  values.yaml  vault-all-secrets.yaml
7-data/: README.md
7-ldap/: Dockerfile  openldap-values.yaml  superset-values.yaml
8-ldap/: Dockerfile
8-ldap-local/: Dockerfile  custom_security_manager.py  superset-values.yaml
9-ldap-local/: Dockerfile  superset-values.yaml
9-ldap-multi-roles/: Dockerfile  Dockerfile copy  superset-values.yaml
db/: README.md  (+2 more)
(+7 files in other folders)
