[project]
name = "15-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Dimitri GRISARD",email = "dimitri.grisard@ingenico.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "beautifulsoup4 (>=4.13.5,<5.0.0)"
]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
